<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>edu.wisc.my.app</groupId>
  <artifactId>uportal-messaging</artifactId>
  <version>0.1.0-SNAPSHOT</version>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.5.0</version>
  </parent>

  <packaging>war</packaging>

  <scm>
    <connection>scm:git:git://github.com:UW-Madison-DoIT/uportal-messaging.git</connection>
    <developerConnection>scm:git:git@github.com:UW-Madison-DoIT/uportal-messaging.git
    </developerConnection>
    <url>https://github.com/UW-Madison-DoIT/uportal-messaging</url>
    <tag>HEAD</tag>
  </scm>

  <distributionManagement>
    <repository>
      <id>myuw-public-releases</id>
      <url>https://artifacts.doit.wisc.edu/artifactory/myuw-public-releases/</url>
    </repository>
    <snapshotRepository>
      <id>myuw-snapshots-artifactorydoit</id>
      <url>https://artifactorydoit.jfrog.io/artifactory/myuw-maven-local-snapshot-cloud</url>
    </snapshotRepository>
  </distributionManagement>

  <repositories>
    <repository>
      <id>myuw-public-releases</id>
      <url>https://artifacts.doit.wisc.edu/artifactory/myuw-public-releases/</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>myuw-public-snapshots</id>
      <url>https://artifacts.doit.wisc.edu/artifactory/myuw-public-snapshots/</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>always</updatePolicy>
      </snapshots>
    </repository>
    <repository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>always</updatePolicy>
      </snapshots>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-rest</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-tomcat</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest-junit</artifactId>
      <version>2.0.0.0</version>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-devtools</artifactId>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.6</version>
    </dependency>
    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>20171018</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.18.0</version>
    </dependency>
    <!-- tag::tests[] -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
      <exclusions>
      	<exclusion>
      		<artifactId>android-json</artifactId>
      		<groupId>com.vaadin.external.google</groupId>
      	</exclusion>
      </exclusions>
    </dependency>
    <!-- end::tests[] -->
  </dependencies>

  <properties>
    <java.version>25</java.version>
  </properties>

  <build>
    
<plugins>
  <plugin>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-maven-plugin</artifactId>
  </plugin>
  <plugin>
    <artifactId>maven-failsafe-plugin</artifactId>
    <executions>
      <execution>
        <goals>
          <goal>integration-test</goal>
          <goal>verify</goal>
        </goals>
      </execution>
    </executions>
  </plugin>
  <plugin>
    <artifactId>maven-war-plugin</artifactId>
    <configuration>
      <attachClasses>true</attachClasses>
    </configuration>
  </plugin>
  <plugin>
    <artifactId>maven-release-plugin</artifactId>
    <version>2.4.2</version>
    <dependencies>
      <dependency>
        <groupId>org.apache.maven.scm</groupId>
        <artifactId>maven-scm-provider-gitexe</artifactId>
        <version>1.8.1</version>
      </dependency>
    </dependencies>
    <configuration>
      <autoVersionSubmodules>true</autoVersionSubmodules>
      <useReleaseProfile>false</useReleaseProfile>
      <releaseProfiles>release</releaseProfiles>
      <goals>deploy</goals>
    </configuration>
  </plugin>
  <plugin>
    <groupId>org.eluder.coveralls</groupId>
    <artifactId>coveralls-maven-plugin</artifactId>
    <version>4.3.0</version>
  </plugin>
</plugins>
  </build>

</project>
